Finalização da primeira versão da API

--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.3.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "prisma": "^6.3.1",
     "uuid": "^11.0.5"
+  },
+  "prisma": {
+    "schema": "src/infra/prisma/schema.prisma"
   }
 }
